Fix for jdk8